# ki-board

./: .clangd  .gitignore  AGENTS.md  README.md  lv_conf.h  platformio.ini  version.json
companion/: index.html  package-lock.json  package.json  vite.config.ts
companion/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
companion/src-tauri/capabilities/: main.json
companion/src-tauri/examples/: asr_probe.rs  ble_probe.rs  ota_flash.rs
companion/src-tauri/icons/: icon.icns
companion/src-tauri/src/: lib.rs  main.rs  protocol.rs
companion/src-tauri/src/transport/: ble_gatt.rs  mod.rs  usb_serial.rs
docs/: dev-story.html  kiro-agent-status-sync.md  kiro-cli-hooks.example.json  kiro-keyboard-prd.md  kiro-keyboard-tech-design.md  replication-guide.md  小红书市场调研报告-Vibe-Coding-Keyboard.html  小红书市场调研报告-Vibe-Coding-Keyboard.md  技术概念百科.md  淘宝屏幕模块选型调研.md  硬件调试指南.md
include/: User_Setup.h  config.h  kiro_logo.h  pins.h
partitions/: default_16MB.csv
powershell_shim/: Cargo.toml  README.md  kiro-silent.bat
scripts/: app_version.py  auto_version.py  check_sensitive_info.sh  firmware_version.py  generate_expressions.py  generate_kiro_gifs.py  generate_kiro_gifs_v2.py  kiro_agent_start.sh  kiro_board_hook.py  preview_kiro_expr_cpp.py
src/: agent_registry.cpp  agent_registry.h  ble_gatt_comm.cpp  ble_gatt_comm.h  ble_hid.cpp  ble_hid.h  buttons.cpp  buttons.h  display.cpp  display.h  display_hardware.cpp  display_hardware.h  encoder_input.cpp  encoder_input.h  hid_actions.cpp  hid_actions.h  keymap.cpp  keymap.h  keyregistry.cpp  keyregistry.h  kiro_expr_table.cpp  (+17 more)
(+63 files in other folders)
