[package]
name = "kiro-keyboard-companion"
version = "0.1.0"
description = "Companion app for the Kiro shortcut keyboard"
authors = ["Kiro"]
edition = "2021"

[lib]
name = "kiro_keyboard_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
base64 = "0.22"
btleplug = "0.11"
cpal = "0.15"
flate2 = "1"
futures-util = "0.3"
hound = "3"
keyring = "3"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
serialport = "4"
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"

[dev-dependencies]
env_logger = "0.11"

[[example]]
name = "ble_probe"
path = "examples/ble_probe.rs"

[[example]]
name = "asr_probe"
path = "examples/asr_probe.rs"

[[example]]
name = "ota_flash"
path = "examples/ota_flash.rs"
